force-app/main/default/objects/Map_From_ACN_OD__c/Map_From_ACN_OD__c.object-meta.xml
<CustomObject>
    <label>FROM ACN Outlet Dispensers</label>
    <nameField>
        <displayFormat>ACN-OD-{0000}</displayFormat>
        <label>From ACN OD  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FROM ACN Outlet Dispensers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>