force-app/main/default/objects/Map_From_ACN_OD__c/fields/Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Map_From_ACN_ODs</relationshipName>
    <type>Lookup</type>
</CustomField>