force-app/main/default/objects/Map_From_ACN_OD__c/fields/Outlet_Dispenser__c.field-meta.xml
<CustomField>
    <fullName>Outlet_Dispenser__c</fullName>
    <label>Outlet Dispenser</label>
    <referenceTo>FS_Outlet_Dispenser__c</referenceTo>
    <relationshipName>Map_From_ACN_ODs</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>